--- a/webProjectv1.html
+++ b/webProjectv1.html
@@ -13,7 +13,7 @@
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>webProjectv1</title>
 <!-- write your code here -->
-<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+<script src="1.0.0/createjs.min.js"></script>
 <script src="webProjectv1.js"></script>
 <script>
 // Global Scripts
